--- a/templates/includes/admin-sidebar.html
+++ b/templates/includes/admin-sidebar.html
@@ -7,7 +7,7 @@
         <li><a href="{% url 'admin_products' %}" class="nav-link" data-link="products"><img class="sidebar-img" src="/static/img/includes/admin-sidebar/product.png" alt="products"><span>Products</span></a></li>
         <li><a href="{% url 'users' %}" class="nav-link" data-link="users"><img class="sidebar-img" src="#" alt="users"><span>Users</span></a></li>
         <li><a href="#" class="nav-link" data-link="orders"><img class="sidebar-img" src="/static/img/includes/admin-sidebar/orders.png" alt="orders"><span>Orders</span></a></li>
-        <li><a href="#" class="nav-link" data-link="sourcing"><img class="sidebar-img" src="/static/img/includes/admin-sidebar/sourcing.png" alt="sourcing"><span>Sourcing Requests</span></a></li>
+        <li><a href="{% url 'admin_sourcing_requests' %}" class="nav-link" data-link="sourcing"><img class="sidebar-img" src="/static/img/includes/admin-sidebar/sourcing.png" alt="sourcing"><span>Sourcing Requests</span></a></li>
         <li><a href="#" class="nav-link" data-link="payments"><img class="sidebar-img" src="/static/img/includes/admin-sidebar/payment.png" alt="payments"><span>Payments</span></a></li>
     </ul>
     <div class="logout">
