--- a/templates/user/manage_store.html
+++ b/templates/user/manage_store.html
@@ -10,7 +10,7 @@
 {% block content %}
 
     <div class="link-store-container">
-        <button class="link-store-btn">Link new Shopify Store</button>
+        <a class="link-store-btn" href="{% url 'shopify_auth' %}">Link new Shopify Store</a>
     </div>
     <table>
         <thead>
