--- a/templates/layouts/user-base.html
+++ b/templates/layouts/user-base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/includes/messages.css">
     <link rel="stylesheet" href="/static/css/includes/table.css">
     <link rel="stylesheet" href="/static/css/includes/tabs.css">
+    <link rel="stylesheet" href="/static/css/includes/modal.css">
     <link rel="stylesheet" href="/static/css/layouts/user-base.css">
     {% block stylesheet %} 
     
