--- a/templates/staff/products.html
+++ b/templates/staff/products.html
@@ -32,6 +32,9 @@
             <label for="product_name">Product Name:</label>
             <input type="text" id="product_name" name="product_name" required>
 
+            <label for="price">Price (₹)</label>
+            <input type="number" name="price" id="price" placeholder="Enter product price" required>
+
             <label for="product_image">Product Images:</label>
             <input type="file" id="product_image" name="product_image" accept="image/*" multiple required>
 
