--- a/templates/staff/update_product.html
+++ b/templates/staff/update_product.html
@@ -19,6 +19,11 @@
         </div>
 
         <div class="form-group">
+            <label for="price">Price (₹)</label>
+            <input type="number" name="price" id="price" value="{{ product.price }}" required>
+        </div>
+
+        <div class="form-group">
             <label for="category">Category:</label>
             <input type="text" id="category" name="category" value="{{ product.category }}" required>
         </div>
