--- a/templates/layouts/staff-base.html
+++ b/templates/layouts/staff-base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/includes/messages.css">
     <link rel="stylesheet" href="/static/css/includes/table.css">
     <link rel="stylesheet" href="/static/css/includes/tabs.css">
+    <link rel="stylesheet" href="/static/css/includes/modal.css">
     <link rel="stylesheet" href="/static/css/layouts/staff-base.css">
     {% block stylesheet %} 
     
