--- a/static/css/includes/modal.css
+++ b/static/css/includes/modal.css
@@ -54,6 +54,10 @@ label {
     color: #555;
 }
 
+.store-selection-section {
+    margin-bottom: 20px;
+}
+
 .product-details-section {
     text-align: center;
     margin-bottom: 20px;
@@ -77,6 +81,7 @@ select {
     margin-top: 8px;
     font-size: 14px;
     background-color: #f9f9f9;
+    box-sizing: border-box;
 }
 
 input {
@@ -85,6 +90,7 @@ input {
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .btn {
