testing push products

--- a/templates/user/manage_store.html
+++ b/templates/user/manage_store.html
@@ -46,7 +46,7 @@
                 {% csrf_token %}
                 <label for="shop">Enter your Shopify store URL:</label>
                 <input type="text" name="shop" id="shop" placeholder="mystore.myshopify.com" required>
-                <button type="submit">Link New Shopify Store</button>
+                <button class="link-store-btn" type="submit">Link New Shopify Store</button>
             </form>
         </div>
     </div>
