--- a/static/css/user/styles.css
+++ b/static/css/user/styles.css
@@ -294,3 +294,42 @@ form .btn-primary:hover {
 #margin-display {
     color: #218838;
 }
+
+
+/**************************************************** manage_store.html ****************************************************/
+
+#openModalBtn {
+    background-color: #007bff;
+    color: white;
+    padding: 15px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#openModalBtn:hover {
+    background-color: #0056b3;
+}
+
+.link-store-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+}
+
+.link-store-btn {
+    background-color: #28a745;
+    color: white;
+    padding: 15px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.link-store-btn:hover {
+    background-color: #218838;
+}
