--- a/templates/user/find_products.html
+++ b/templates/user/find_products.html
@@ -7,6 +7,16 @@
 {% endblock %}
 
 {% block content %}
+{% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+
     <div class="container">
         <div class="categories">
             <div class="category">
