--- a/static/css/user/styles.css
+++ b/static/css/user/styles.css
@@ -125,6 +125,11 @@ form .btn-primary:hover {
     font-size: 0.85rem;
     color: #555;
     margin-bottom: 1rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Show only two lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .view-button {
