--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -25,7 +25,7 @@
         <li class="dropdown">
         <a href="#" class="dropdown-btn"><img class="sidebar-img" src="/static/img/includes/sidebar/orders.png" alt="orders"><span>Orders</span></a>
         <ul class="dropdown-content">
-            <li><a href="#">All Orders</a></li>
+            <li><a href="{% url 'user_orders' %}">All Orders</a></li>
             <li><a href="#">Shipments</a></li>
         </ul>
         </li>
