--- a/templates/user/orders.html
+++ b/templates/user/orders.html
@@ -26,11 +26,11 @@
         <tbody>
             {% for order in orders %}
                 <tr>
-                    <td>order.order_id</td>
-                    <td>order.customer_name</td>
-                    <td>order.total_price</td>
-                    <td>order.created_at</td>
-                    <td>order.updated_at</td>
+                    <td>{{order.order_id}}</td>
+                    <td>{{order.customer_name}}</td>
+                    <td>{{order.total_price}}</td>
+                    <td>{{order.created_at}}</td>
+                    <td>{{order.updated_at}}</td>
                 </tr>
             {% endfor %}
         </tbody>
