--- a/templates/user/orders.html
+++ b/templates/user/orders.html
@@ -28,20 +28,28 @@
         <thead>
             <tr>
                 <th>Order ID</th>
-                <th>Customer Name</th>
+                <th>Item</th>
+                <th>Quantity</th>
+                <th>Customer</th>
                 <th>Total Price</th>
                 <th>Created At</th>
-                <th>Updated At</th>
+                <th>Payment Status</th>
+                <th>Fulfillment Status</th>
+                <th>Delivery Status</th>
             </tr>
         </thead>
         <tbody>
             {% for order in orders %}
                 <tr>
-                    <td>{{order.order_id}}</td>
-                    <td>{{order.customer_name}}</td>
-                    <td>{{order.total_price}}</td>
-                    <td>{{order.created_at}}</td>
-                    <td>{{order.updated_at}}</td>
+                    <td>{{ order.order_id }}</td>
+                    <td>{{ item.product_name }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{{ order.customer_name }}</td>
+                    <td>{{ order.total_price }}</td>
+                    <td>{{ order.created_at }}</td>
+                    <td>{{ order.payment_status }}</td>
+                    <td>{{ order.fulfillment_status }}</td>
+                    <td>{{ order.delivery_status }}</td>
                 </tr>
             {% endfor %}
         </tbody>
