--- a/templates/user/orders.html
+++ b/templates/user/orders.html
@@ -44,7 +44,7 @@
                     <td>{{ order.order_id }}</td>
                     <td>{{ item.product_name }}</td>
                     <td>{{ item.quantity }}</td>
-                    <td>{{ order.customer_name }}</td>
+                    <td>{{ order.customer }}</td>
                     <td>{{ order.total_price }}</td>
                     <td>{{ order.created_at }}</td>
                     <td>{{ order.payment_status }}</td>
